Almost done with the first post

--- a/design/pages/index.html
+++ b/design/pages/index.html
@@ -1,7 +1,10 @@
-{% extends "templates/base.html" %}
-
-{% block content %}
-  {% for post in state.posts %}
-    <a href="posts/{{post.number}}">{{ post.title }}</a>
-  {% endfor %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+  Welcome home
+</body>
+</html>
