Add about section on the home page

--- a/design/index.html
+++ b/design/index.html
@@ -3,6 +3,19 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+  <h1>About</h1>
+
+  <div class="about">
+  <img src="hugo.jpeg" alt="picture of me" class="profile-picture"/>
+  Hi, I am Hugo, currently doing a bachelor in computer science at the University
+  of Utrecht. On this blog I share things I've learned from coding projects that I
+  found interesting. This can range from very technical depth about the theory behind
+  something, to smart decision making and creating a maintainable project. My interest
+  lie generally in anything GPU related, writing 'smart' code, and a sprinkle of functional
+  programming on top.
+  </div>
+
+
   <h1>Latest posts</h1>
   
   
