--- a/design/index.html
+++ b/design/index.html
@@ -11,7 +11,7 @@
   of Utrecht. On this blog I share things I've learned from coding projects that I
   found interesting. This can range from very technical depth about the theory behind
   something, to smart decision making and creating a maintainable project. My interest
-  lie generally in anything GPU related, writing 'smart' code, and a sprinkle of functional
+  lie generally in anything GPU related, writing efficient code, and a sprinkle of functional
   programming on top.
   </div>
 
