Rewrite zip in terms of ab instead of the reverse

--- a/design/index.html
+++ b/design/index.html
@@ -28,4 +28,10 @@
   {% endfor %}
   </div>
 
+  <h2>Virtual friends</h2>
+  <ul>
+  <li><td><a href="https://blog.llandsmeer.com/" target="_blank">The Weekend Writeup</a></td></li>
+  </ul>
+
+
 {% endblock %}
