--- a/design/index.html
+++ b/design/index.html
@@ -7,12 +7,29 @@
 
   <div class="about">
   <img src="hugo.jpeg" alt="picture of me" class="profile-picture"/>
-  Hi, I am Hugo, currently doing a bachelor in computer science at the University
-  of Utrecht. On this blog I share things I've learned from coding projects that I
-  found interesting. This can range from very technical depth about the theory behind
-  something, to smart decision making and creating a maintainable project. My interest
-  lie generally in anything GPU related, writing efficient code, and a sprinkle of functional
-  programming on top.
+  <p>
+    Hi, I am Hugo, currently doing a masters in programming technologies at the University
+    of Utrecht. On this blog I share things I've learned from coding projects that I
+    found interesting. This can range from very technical depth about the theory behind
+    something, to smart decision making and creating a maintainable project. My interest
+    lie generally in anything GPU related, writing efficient code, and a sprinkle of functional
+    programming on top.
+  </p>
+  
+  <p>
+  More recently I have also become very intrigued by the field of cyber security and spent a healthy
+  amount of time on <a href="https://www.hackthebox.eu/home/users/profile/226598">Hack the Box</a>. Currently
+  I am investigating possibilities of doing any security related work next to masters, to keep things as broad as
+  possible.
+  </p>
+
+  <p>
+  Here are a couple of ways you can reach me:
+  <ul>
+    <li><a href="https://www.linkedin.com/in/hugopeters1024/">LinkedIn</a></li>
+    <li>Send an email to <i>hpeters1024@gmail.com</i>. Don't forget to include your public key ;)</li>
+  </ul>
+  </p>
   </div>
 
 
