--- a/design/index.html
+++ b/design/index.html
@@ -27,7 +27,7 @@
   Here are a couple of ways you can reach me:
   <ul>
     <li><a href="https://www.linkedin.com/in/hugopeters1024/">LinkedIn</a></li>
-    <li>Send an email to <i>hpeters1024@gmail.com</i>. Don't forget to include your public key ;)</li>
+    <li>Send an email to <i>hpeters1024 &#60;at&#62; gmail.com</i>. Don't forget to include your public key ;)</li>
   </ul>
   </p>
   </div>
