--- a/design/index.html
+++ b/design/index.html
@@ -18,9 +18,12 @@
   
   <p>
   More recently I have also become very intrigued by the field of cyber security and spent a healthy
-  amount of time on <a href="https://www.hackthebox.eu/home/users/profile/226598">Hack the Box</a>. Currently
-  I am investigating possibilities of doing any security related work next to masters, to keep things as broad as
-  possible.
+  amount of time on <a href="https://www.hackthebox.eu/home/users/profile/226598">Hack the Box</a>.
+  </p>
+
+  <p>
+  I'm expected to graduate at the end of 2022 and am actively searching for a developer job that
+  involves either Haskell or Rust (or both). 
   </p>
 
   <p>
