update about me

--- a/design/index.html
+++ b/design/index.html
@@ -8,22 +8,22 @@
   <div class="about">
   <img src="hugo.jpeg" alt="picture of me" class="profile-picture"/>
   <p>
-    Hi, I am Hugo, currently doing a masters in programming technologies at the University
-    of Utrecht. On this blog I share things I've learned from coding projects that I
+    Hi, I am Hugo, I graduated with a Master's in Programming Technologies at the 
+    University of Utrecht in 2023. 
+    On this blog I share things I've learned from coding projects that I
     found interesting. This can range from very technical depth about the theory behind
     something, to smart decision making and creating a maintainable project. My interest
-    lie generally in anything GPU related, writing efficient code, and a sprinkle of functional
-    programming on top.
+    lie generally in anything GPU related, writing efficient code, and a 
+    sprinkle of functional programming on top.
   </p>
   
   <p>
-  More recently I have also become very intrigued by the field of cyber security and spent a healthy
+  I have also dabled by the field of cyber security and spent a healthy
   amount of time on <a href="https://www.hackthebox.eu/home/users/profile/226598">Hack the Box</a>.
   </p>
 
   <p>
-  I'm expected to graduate at the end of 2022 and am actively searching for a developer job that
-  involves either Haskell or Rust (or both). 
+  I am currently employed at <a href="https://channable.com">Channable </a>as a Haskell Software Engineer. 
   </p>
 
   <p>
