update place of work

--- a/design/index.html
+++ b/design/index.html
@@ -23,7 +23,7 @@
   </p>
 
   <p>
-  I am currently employed at <a href="https://channable.com">Channable </a>as a Haskell Software Engineer.
+  I am currently employed at <a href="https://groq.com/">Groq</a> as an FPGA / Haskell Software Engineer.
   </p>
 
   <p>
