add icons for every post

--- a/design/index.html
+++ b/design/index.html
@@ -18,7 +18,7 @@
   </p>
 
   <p>
-  I have also dabled by the field of cyber security and spent a healthy
+  I have also dabled in the field of cyber security and spent a healthy
   amount of time on <a href="https://www.hackthebox.eu/home/users/profile/226598">Hack the Box</a>.
   </p>
 
